# webinar-generics

./: .gitignore  course-info.yaml  stack.yaml  webinar-generics.cabal
common/: Common.hs
getting-started/: lesson-info.yaml
getting-started/task0/: Task.hs  Test.hs  task-info.yaml  task.md
session1/task1/: Task.hs  Test.hs  task-info.yaml  task.md
session2/task1/: Task.hs  Test.hs  task-info.yaml  task.md
session2/task2/: Task.hs  Test.hs  task-info.yaml  task.md
session3/task1/: Task.hs  Test.hs  task-info.yaml  task.md
