cabal-version:       >=1.10
name:                webinar-generics
version:             0.1.0
build-type:          Simple

library
  default-language:    Haskell2010
  hs-source-dirs:      common
  exposed-modules:     Common
  build-depends:       base >=4.12 && <5

test-suite getting-started-task0-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      getting-started/task0
  main-is:             Test.hs
  other-modules:       Task
  ghc-options:         -fdefer-type-errors
  build-depends:       base >=4.12 && <5, webinar-generics,
                       hspec, QuickCheck, generic-arbitrary

test-suite session1-task1-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      session1/task1
  main-is:             Test.hs
  other-modules:       Task
  ghc-options:         -fdefer-type-errors
  build-depends:       base >=4.12 && <5, webinar-generics,
                       hspec, QuickCheck, generic-arbitrary

test-suite session2-task1-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      session2/task1
  main-is:             Test.hs
  other-modules:       Task
  ghc-options:         -fdefer-type-errors
  build-depends:       base >=4.12 && <5, webinar-generics,
                       hspec, QuickCheck, generic-arbitrary

test-suite session2-task2-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      session2/task2
  main-is:             Test.hs
  other-modules:       Task
  ghc-options:         -fdefer-type-errors
  build-depends:       base >=4.12 && <5, webinar-generics,
                       hspec, QuickCheck, generic-arbitrary

test-suite session3-task1-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      session3/task1
  main-is:             Test.hs
  other-modules:       Task
  ghc-options:         -fdefer-type-errors
  build-depends:       base >=4.12 && <5, webinar-generics,
                       hspec, QuickCheck, generic-arbitrary